--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=SpringDemoApp
+spring.datasource.url=jdbc:postgres://localhost:5432/postgres
+spring.datasource.username=spring.datasource.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 server.port=8082
 server.error.whitelabel.enabled=false
