--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=SpringDemoApp
-spring.datasource.url=jdbc:postgres://localhost:5432/postgres
-spring.datasource.username=spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 server.port=8082
 server.error.whitelabel.enabled=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
