--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ server.port=8082
 server.error.whitelabel.enabled=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.freemarker.expose-request-attributes=true
